--- a/components/resume.html
+++ b/components/resume.html
@@ -8,10 +8,14 @@
         <div class="resume-simple">
             <div class="resume-header">
                 <h3>My Professional Resume</h3>
-                <p class="resume-tagline">Tech Professional at the Intersection of Software Engineering & Data Science</p>
+                <p class="resume-tagline">Tech Enthusiast | Full Stack Developer | Competitive Programmer</p>
                 <div class="resume-actions">
-                    <a href="assets/resumes/Aravinth_Resume.pdf" class="btn btn-preview open-pdf-modal" data-modal-title="Resume Preview">Preview Resume <i class="fas fa-eye"></i></a>
-                    <a href="assets/resumes/Aravinth_Resume.pdf" class="btn btn-download" download>Download PDF <i class="fas fa-download"></i></a>
+                    <a href="https://drive.google.com/file/d/1K4dGtC187PYcaMTiLlEzRDaw5xbZPwpS/preview" class="btn btn-preview" target="_blank">
+                        Preview Resume <i class="fas fa-eye"></i>
+                    </a>
+                    <a href="https://drive.google.com/uc?export=download&id=1K4dGtC187PYcaMTiLlEzRDaw5xbZPwpS" class="btn btn-download">
+                        Download PDF <i class="fas fa-download"></i>
+                    </a>
                 </div>
             </div>
         </div>
