Updated About section

--- a/components/about.html
+++ b/components/about.html
@@ -7,7 +7,7 @@
         </div>
         <div class="about-content">
             <div class="about-image">
-                <img src="assets/images/RohithGoje.jpg" alt="Aravinth Profile Image" />
+                <img src="assets/images/RohithGoje.jpg" alt="Rohith Profile Image" />
             </div>
             <div class="about-text">
                 <p>
