Updated Contact section

--- a/components/contact.html
+++ b/components/contact.html
@@ -13,7 +13,7 @@
                     </div>
                     <div class="contact-details">
                         <h3>Email</h3>
-                        <p><a href="mailto:aravinthvr@gmail.com">aravinthvr@gmail.com</a></p>
+                        <p><a href="mailto:rohithgoje21@gmail.com">rohithgoje21@gmail.com</a></p>
                     </div>
                 </div>
                 <div class="contact-item">
@@ -22,7 +22,7 @@
                     </div>
                     <div class="contact-details">
                         <h3>Phone</h3>
-                        <p><a href="tel:+917904907858">+91 7904907858</a></p>
+                        <p><a href="tel:+918793171763">+91 8793171763</a></p>
                     </div>
                 </div>
                 <div class="contact-item">
@@ -31,7 +31,8 @@
                     </div>
                     <div class="contact-details">
                         <h3>LinkedIn</h3>
-                        <p><a href="https://linkedin.com/in/aravinthvr" target="_blank">linkedin.com/in/aravinthvr</a></p>
+                        <p><a href="https://www.linkedin.com/in/goje-rohith-753ab925a/"
+                                target="_blank">linkedin.com/in/goje-rohith-753ab925a</a></p>
                     </div>
                 </div>
                 <div class="contact-item">
@@ -40,12 +41,12 @@
                     </div>
                     <div class="contact-details">
                         <h3>GitHub</h3>
-                        <p><a href="https://github.com/aravinthvr" target="_blank">github.com/aravinthvr</a></p>
+                        <p><a href="https://github.com/rohithgoje21" target="_blank">github.com/rohithgoje21</a></p>
                     </div>
                 </div>
             </div>
             <div class="contact-form">
-                <form id="contactForm" action="https://formspree.io/f/mrgypwyn" method="POST">
+                <form id="contactForm" action="https://formspree.io/f/mdkdwqke" method="POST">
                     <div class="form-group">
                         <label for="name">Name</label>
                         <input type="text" id="name" name="Name" required placeholder="">
