Added coding-profiles section

--- a/components/header.html
+++ b/components/header.html
@@ -17,6 +17,7 @@
                         <li><a href="#certifications" class="dropdown-item">Certifications</a></li>
                         <li><a href="#education" class="dropdown-item">Education</a></li>
                         <li><a href="#achievements" class="dropdown-item">Achievements</a></li>
+                        <li><a href="#coding-profiles" class="dropdown-item">Coding Profiles</a></li>
                     </ul>
                 </li>
                 <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
