--- a/components/achievements.html
+++ b/components/achievements.html
@@ -19,8 +19,9 @@
                 <div class="achievement-details">
                     <p class="achievement-organization">GirlScript Summer Of Code 2025</p>
                     <p class="achievement-description">
-                        Selected as a Contributor for GirlScript Summer of Code 2025, actively contributing to
-                        open-source projects and collaborating with the developer community.
+                        Selected as a Contributor for GirlScript Summer of Code 2025, actively contributing to open-source projects.
+                        <br>
+                        Contributed to the <a href="https://github.com/Muneerali199/DocMagic" class="cert-link" target="_blank">DocMagic</a> project by enhancing features, fixing bugs, and improving overall code quality.
                     </p>
                 </div>
             </div>
